--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -208,7 +208,7 @@
       "name": "mkdoc",
       "steps": [
         {
-          "exec": "./scripts/mkdoc.py src/stacks > docs/README.md"
+          "exec": "./scripts/mkdoc.py src/stacks docs/README.md"
         }
       ]
     }
