--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@aws-cdk/assert": "^1.73.0",
     "@aws-cdk/aws-ec2": "^1.87.1",
+    "@aws-cdk/aws-lambda": "^1.87.1",
     "@aws-cdk/core": "^1.73.0"
   },
   "bundledDependencies": [],
